add github push

--- a/3.html
+++ b/3.html
@@ -14,7 +14,7 @@
 <h1>Bioserv</h1>
 <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a>
 <strong><u>바이오서브</u></strong> 관리 홈페이지 입니다.</p><p>대리점 품목 :
-기산바이오, 엔지노믹스, 이노진텍, 리피도미아</p>
+이노진텍</p>
 <img src="7661.png"width="50%">
 </body>
 </html>
